# pride-mcp-server

./: .dockerignore  .gitignore  .gitlab-ci.yml  .kubernetes.yml  CLAUDE_VS_GEMINI_COMPARISON.md  DEBUG_LOGGING_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FUTURE_SERVICES_EXAMPLE.md  GITLAB_VARIABLES.md  GITLAB_VARIABLES_GUIDE.md  INGRESS_SERVICE_RELATIONSHIP.md  LOAD_BALANCER_PR_TEMPLATE.md  PROFESSIONAL_UI_README.md  README.md  ROUTING_ARCHITECTURE.md  SETUP_GUIDE.md  analytics_dashboard.html  api_endpoints.py  config.env  cursor_mcp_config.json  database.py  deploy.sh  health_check.py  help_command.py  help_config.py  main.py  mcp_server.py  pride_questions.db  pyproject.toml  serve_analytics.py  server.py  slack_integration.py  start.sh  start_kubernetes.py  start_services.py  start_with_ui.sh  test_api.py  test_fixed_api.py  (+2 more)
config/: settings.py
help/: README.md  chatgpt_config.json  claude_desktop_config.json  cursor_config.json  custom_config.json  server_info.json  vscode_config.json
mcp_client_tools/: LICENSE  README.md  pyproject.toml  setup.py
mcp_client_tools/src/mcp_client_tools/: __init__.py  ai_conversational_ui.py  client.py  conversational_ui.py  professional_ui.py  tools.py  web_server.py  web_ui.py
servers/: pride_mcp_server.py
templates/: ui_test.html
tools/: __init__.py  pride_archive_public_api.py
utils/: __init__.py  gemini_service.py  logging.py
